--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 *.log
 /build_BackUpThisFolder_ButDontShipItWithYourGame
 /PAR_WS2526_BurstDebugInformation_DoNotShip
+/Assets/Configs/
 
 # By default unity supports Blender asset imports, *.blend1 blender files do not need to be commited to version control.
 *.blend1
